Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -329,7 +329,7 @@ h1 {
 }
 
 .client-preview + .client-preview {
-  margin-top: 34px;
+  margin-top: 52px;
 }
 
 .client-preview-trigger {
